Eclipse 2022-03: Features to show (updated)